temp changes to dynamic_server and fuel template

--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -10,7 +10,7 @@
     <table>
         <thead>
             <tr>
-                <th>Counthy</th>
+                <th>Country</th>
                 <th>Plant Identification Number</th>
                 <th>Primary Fuel Source</th>
                 <th>Secondary Fuel Source</th>
@@ -19,7 +19,7 @@
             </tr>
         </thead>
         <tbody>
-            $$TABLE_BODY$$
+            $$TABLE_DATA$$
         </tbody>
     </table>
 </body>
