--- a/templates/capacity.html
+++ b/templates/capacity.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TEMP</title>
+	<title>Global Power Plants Database</title>
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
