--- a/templates/capacity.html
+++ b/templates/capacity.html
@@ -12,6 +12,7 @@
             <li><a href="http://localhost:8000/power/fuel/coal">Coal</a></li>
             <li><a href="http://localhost:8000/power/fuel/gas">Gas</a></li>
             <li><a href="http://localhost:8000/power/fuel/hydro">Hydro</a></li>
+            <li><a href="http://localhost:8000/power/fuel/nuclear">Nuclear</a></li>
             <li><a href="http://localhost:8000/power/fuel/oil">Oil</a></li>
             <li><a href="http://localhost:8000/power/fuel/solar">Solar</a></li>
             <li><a href="http://localhost:8000/power/fuel/wind">Wind</a></li>
