--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -7,14 +7,22 @@
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
+    <p><a href="http://localhost:8000/power/all_data">View All Data</a></p>
     <p> View by primary fuel source: 
         <ul>
+            <li><a href="http://localhost:8000/power/fuel/biomass">Biomass</a></li>
             <li><a href="http://localhost:8000/power/fuel/coal">Coal</a></li>
+            <li><a href="http://localhost:8000/power/fuel/cogeneration">Cogeneration</a></li>
             <li><a href="http://localhost:8000/power/fuel/gas">Gas</a></li>
+            <li><a href="http://localhost:8000/power/fuel/geothermal">Geothermal</a></li>
             <li><a href="http://localhost:8000/power/fuel/hydro">Hydro</a></li>
             <li><a href="http://localhost:8000/power/fuel/nuclear">Nuclear</a></li>
             <li><a href="http://localhost:8000/power/fuel/oil">Oil</a></li>
+            <li><a href="http://localhost:8000/power/fuel/petcoke">Petcoke</a></li>
             <li><a href="http://localhost:8000/power/fuel/solar">Solar</a></li>
+            <li><a href="http://localhost:8000/power/fuel/storage">Storage</a></li>
+            <li><a href="http://localhost:8000/power/fuel/waste">Waste</a></li>
+            <li><a href="http://localhost:8000/power/fuel/wave">Wave and Tidal</a></li>
             <li><a href="http://localhost:8000/power/fuel/wind">Wind</a></li>
             <li><a href="http://localhost:8000/power/fuel/other">Other</a></li>
         </ul>
@@ -27,6 +35,7 @@
         </ul>
     </p>
     <h2>$$Sorted_By_Header$$</h2>
+    <p><a href="%%Previous_Link%%">Previous  </a> <a href="%%Next_Link%%">Next</a></p>
     <table>
         <thead>
             <tr>
