--- a/templates/capacity.html
+++ b/templates/capacity.html
@@ -31,7 +31,14 @@
         <ul>
             <li><a href="http://localhost:8000/power/capacity/low">Low (200 >)</a></li>
             <li><a href="http://localhost:8000/power/capacity/medium">Medium (200-599)</a></li>
-            <li><a href="http://localhost:8000/power/capacity/High">High (600 &lt)</a></li>
+            <li><a href="http://localhost:8000/power/capacity/high">High (600 &lt)</a></li>
+        </ul>
+    </p>
+    <p> View by 2017 Estimated Energy Generation
+        <ul>
+            <li><a href="http://localhost:8000/power/estimated/low">Low (200 >)</a></li>
+            <li><a href="http://localhost:8000/power/estimated/medium">Medium (200-1000)</a></li>
+            <li><a href="http://localhost:8000/power/estimated/High">High (1000 &lt)</a></li>
         </ul>
     </p>
     <h2>$$Sorted_By_Header$$</h2>
