--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
-    <p><a href="http://localhost:8000/power/all_data">View All Data</a></p>
+    <p><a href="http://localhost:8000/power/fuel/all_data">View All Data</a></p>
     <p> View by primary fuel source: 
         <ul>
             <li><a href="http://localhost:8000/power/fuel/biomass">Biomass</a></li>
