--- a/templates/country.html
+++ b/templates/country.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Global Power Plants Database</title>
+    <link rel="stylesheet" href="/css/plantStyles.css"/>
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
@@ -42,11 +43,15 @@
         </ul>
     </p>
 
-    <p> View by country
-        <ul>
-            $$COUNTRY_LINK$$
-        </ul>
+    <p> 
+        <div class="dropdown">
+            <button>View by Country</button>
+            <div class="dropdown-content">
+                $$COUNTRY_LINKS$$
+            </div>
+        </div>
     </p>
+
     <h2>$$Sorted_By_Header$$</h2>
     <p><a href="%%Previous_Link%%">Previous  </a> <a href="%%Next_Link%%">Next</a></p>
     <table>
