--- a/public/css/plantStyles.css
+++ b/public/css/plantStyles.css
@@ -1,3 +1,4 @@
+/*
 body {
     background-image: url("here.avif");
     font-family: 'Courier New', Courier, monospace;
@@ -16,11 +17,11 @@ body {
     position:relative;
 }
 
-/*
+
 .headerpicture {
 width: 100%;
 }
-*/
+
 .myfootercss {
     background-color: black;
     height: 150px;
@@ -79,7 +80,7 @@ h2 {
 #myStoryContent:target {
     display: block;
 }
-
+*/
 
 
 /* unvisited link */
@@ -100,4 +101,33 @@ a:hover {
 /* selected link */
 a:active {
     color: green;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width: 100%;
+    overflow: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+}
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  
+.dropdown-content a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+}
+  
+.dropdown-content a:hover {
+    color: #FFFFFF;
+    background-color: #00A4BD;
 }
