--- a/templates/country.html
+++ b/templates/country.html
@@ -8,38 +8,38 @@
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
-    <p><a href="http://localhost:8000/power/fuel/all_data">View All Data</a></p>
+    <p><a href="https://powerplant.onrender.com/power/fuel/all_data">View All Data</a></p>
     <p> View by primary fuel source: 
         <ul>
-            <li><a href="http://localhost:8000/power/fuel/biomass">Biomass</a></li>
-            <li><a href="http://localhost:8000/power/fuel/coal">Coal</a></li>
-            <li><a href="http://localhost:8000/power/fuel/cogeneration">Cogeneration</a></li>
-            <li><a href="http://localhost:8000/power/fuel/gas">Gas</a></li>
-            <li><a href="http://localhost:8000/power/fuel/geothermal">Geothermal</a></li>
-            <li><a href="http://localhost:8000/power/fuel/hydro">Hydro</a></li>
-            <li><a href="http://localhost:8000/power/fuel/nuclear">Nuclear</a></li>
-            <li><a href="http://localhost:8000/power/fuel/oil">Oil</a></li>
-            <li><a href="http://localhost:8000/power/fuel/petcoke">Petcoke</a></li>
-            <li><a href="http://localhost:8000/power/fuel/solar">Solar</a></li>
-            <li><a href="http://localhost:8000/power/fuel/storage">Storage</a></li>
-            <li><a href="http://localhost:8000/power/fuel/waste">Waste</a></li>
-            <li><a href="http://localhost:8000/power/fuel/wave">Wave and Tidal</a></li>
-            <li><a href="http://localhost:8000/power/fuel/wind">Wind</a></li>
-            <li><a href="http://localhost:8000/power/fuel/other">Other</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/biomass">Biomass</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/coal">Coal</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/cogeneration">Cogeneration</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/gas">Gas</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/geothermal">Geothermal</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/hydro">Hydro</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/nuclear">Nuclear</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/oil">Oil</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/petcoke">Petcoke</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/solar">Solar</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/storage">Storage</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/waste">Waste</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/wave">Wave and Tidal</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/wind">Wind</a></li>
+            <li><a href="https://powerplant.onrender.com/power/fuel/other">Other</a></li>
         </ul>
     </p>
     <p> View by capacity
         <ul>
-            <li><a href="http://localhost:8000/power/capacity/low">Low (200 >)</a></li>
-            <li><a href="http://localhost:8000/power/capacity/medium">Medium (200-599)</a></li>
-            <li><a href="http://localhost:8000/power/capacity/High">High (600 &lt)</a></li>
+            <li><a href="https://powerplant.onrender.com/power/capacity/low">Low (200 >)</a></li>
+            <li><a href="https://powerplant.onrender.com/power/capacity/medium">Medium (200-599)</a></li>
+            <li><a href="https://powerplant.onrender.com/power/capacity/High">High (600 &lt)</a></li>
         </ul>
     </p>
     <p> View by estimated electricity
         <ul>
-            <li><a href="http://localhost:8000/power/estimated/low">Low (200 >)</a></li>
-            <li><a href="http://localhost:8000/power/estimated/medium">Medium (200-1000)</a></li>
-            <li><a href="http://localhost:8000/power/estimated/High">High (1000 &lt)</a></li>
+            <li><a href="https://powerplant.onrender.com/power/estimated/low">Low (200 >)</a></li>
+            <li><a href="https://powerplant.onrender.com/power/estimated/medium">Medium (200-1000)</a></li>
+            <li><a href="https://powerplant.onrender.com/power/estimated/High">High (1000 &lt)</a></li>
         </ul>
     </p>
 
