--- a/templates/capacity.html
+++ b/templates/capacity.html
@@ -69,5 +69,25 @@
             $$TABLE_DATA$$
         </tbody>
     </table>
+    <div id="chart"></div>
+
+
+    <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8"></script>
+    <script>
+    
+        const chartData = $$Graph$$;
+        const data = [{
+            x: chartData.countryNames,
+            y: chartData.capacity_mw,
+            type: "bar"
+        }];
+    
+        const layout = {
+            title: "Countries and Capacities"
+        };
+    
+        Plotly.newPlot("chart", data, layout);
+    
+    </script>
 </body>
 </html>
