--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -49,6 +49,8 @@
                 $$COUNTRY_LINKS$$
             </div>
         </div>
+
+        $$Graph$$
     </p>
     <h2>$$Sorted_By_Header$$</h2>
     <p><a href="%%Previous_Link%%">Previous  </a> <a href="%%Next_Link%%">Next</a></p>
