--- a/templates/capacity.html
+++ b/templates/capacity.html
@@ -82,11 +82,9 @@
             type: "bar"
         }];
     
-        const layout = {
-            title: "Countries and Capacities"
-        };
+      
     
-        Plotly.newPlot("chart", data, layout);
+        Plotly.newPlot("chart", data);
     
     </script>
 </body>
