--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -85,11 +85,9 @@
             type: "bar"
         }];
     
-        const layout = {
-            title: "Countries and their Fuel Types"
-        };
+        
     
-        Plotly.newPlot("chart", data, layout);
+        Plotly.newPlot("chart", data);
     
     </script>
 
