--- a/templates/estimated.html
+++ b/templates/estimated.html
@@ -69,5 +69,24 @@
             $$TABLE_DATA$$
         </tbody>
     </table>
+
+    <div id="chart"></div>
+    
+    
+    <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8"></script>
+    <script>
+    
+        const chartData = $$Graph$$;
+        const data = [{
+            x: chartData.countryNames,
+            y: chartData.estimated2017,
+            type: "bar"
+        }];
+    
+        
+    
+        Plotly.newPlot("chart", data);
+    
+    </script>
 </body>
 </html>
