--- a/templates/capacity.html
+++ b/templates/capacity.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
-    <div id="chart"></div>
     <p><a href="https://powerplant.onrender.com/power/fuel/all_data">View All Data</a></p>
     <p> View by primary fuel source: 
         <ul>
@@ -51,6 +50,7 @@
             </div>
         </div>
     </p>
+    <div id="chart"></div>
     <h2>$$Sorted_By_Header$$</h2>
     <p><a href="%%Previous_Link%%">Previous  </a> <a href="%%Next_Link%%">Next</a></p>
     <table>
@@ -70,23 +70,32 @@
             $$TABLE_DATA$$
         </tbody>
     </table>
+
+
+
     
-
-
+    
+    
     <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8"></script>
     <script>
     
         const chartData = $$Graph$$;
         const data = [{
             x: chartData.countryNames,
-            y: chartData.capacity_mw,
+            y: chartData.estimated2017,
             type: "bar"
         }];
     
-      
+        
     
         Plotly.newPlot("chart", data);
     
     </script>
+
+
+
+
+
+
 </body>
 </html>
