--- a/templates/estimated.html
+++ b/templates/estimated.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Global Power Plants Database</title>
-    <link rel="stylesheet" href="/css/plantStyles.css"/>
+    <link rel="stylesheet" href="/public/css/style.css"/>
 </head>
 <body>
     <h1>Global Power Plants Database</h1>
